# dmchain_contract

./: README.md  build.sh
fibos.contracts/: CMakeLists.txt
fibos.contracts/eosio.system/src/: delegate_bandwidth.cpp  producer_pay.cpp  voting.cpp
fibos.contracts/eosio.system/test/: fibos.js  index.js  test_util.js
fibos.contracts/eosio.system/test/dmc/: pstamount.js
fibos.contracts/eosio.system/test/system/: bonus.js  index.js  lock_delegate.js
fibos.contracts/eosio.token/test/: index.js  package.json  test_util.js
fibos.contracts/eosio.token/test/FO/: index.js  parameter_create.js  pass.js  transfer_special_acount.js
fibos.contracts/eosio.token/test/classic/: index.js  parameter.js  parameter_close.js  parameter_create.js  parameter_destroy.js  parameter_exchange.js  parameter_issue.js  parameter_lock.js  pass.js  (+4 more)
fibos.contracts/fibos.abo/: CMakeLists.txt
fibos.contracts/fibos.abo/include/fibos.abo/: fibos.abo.hpp
fibos.contracts/fibos.abo/src/: fibos.abo.cpp
fibos.contracts/fibos.abo/test/: fibos.js  index.js  package-lock.json  package.json  param_transfer_abo.js  test_util.js
fibos.contracts/fibos.council/: CMakeLists.txt
fibos.contracts/fibos.council/abi/: fibos.council.abi
fibos.contracts/fibos.council/include/fibos.council/: fibos.council.hpp
fibos.contracts/fibos.council/src/: fibos.council.cpp
fibos.contracts/fibos.council/test/: fibos.js  index.js  param_transfer_council.js  test_util.js
js.contracts/fibos.council/: build.js  package.json
js.contracts/fibos.council/lib/: index.abi
js.contracts/fibos.council/test/: index.js
(+69 files in other folders)
